@@ -107,6 +107,8 @@ WorkshopConfigParser::Partition::ParseLine(FileLineParser &line)
         config.database = line.ExpectValueAndEnd();
     } else if (strcmp(word, "database_schema") == 0) {
         config.database_schema = line.ExpectValueAndEnd();
+    } else if (strcmp(word, "max_log") == 0) {
+        config.max_log = ParseSize(line.ExpectValueAndEnd());
     } else if (strcmp(word, "journal") == 0) {
         config.enable_journal = line.NextBool();
         line.ExpectEnd();
