@@ -18,6 +18,9 @@ class LogBridge {
     std::unique_ptr<SyslogClient> syslog;
     bool enable_journal = false;
 
+    std::string buffer;
+    size_t max_buffer_size = 0;
+
 public:
     LogBridge(EventLoop &event_loop,
               const char *_plan_name, const char *_job_id,
@@ -27,6 +30,16 @@ public:
     void CreateSyslog(const char *host_and_port,
                       const char *me,
                       int facility);
+
+    void EnableBuffer(size_t max_size) {
+        max_buffer_size = max_size;
+    }
+
+    const char *GetBuffer() const {
+        return max_buffer_size > 0
+            ? buffer.c_str()
+            : nullptr;
+    }
 
     void EnableJournal() {
         enable_journal = true;
