@@ -7,8 +7,6 @@
 #ifndef __QUEUE_PG_H
 #define __QUEUE_PG_H
 
-#include <stdbool.h>
-
 namespace Pg {
 class Connection;
 class Result;
@@ -44,6 +42,8 @@ int pg_set_job_progress(Pg::Connection &db, const char *job_id, unsigned progres
 
 int pg_rollback_job(Pg::Connection &db, const char *id);
 
-int pg_set_job_done(Pg::Connection &db, const char *id, int status);
+int
+pg_set_job_done(Pg::Connection &db, const char *id, int status,
+                const char *log);
 
 #endif
